--- a/public/transparentMaterial.html
+++ b/public/transparentMaterial.html
@@ -44,11 +44,7 @@
     <script src="./js/controls/OrbitControls.js"></script>
     <script src="./js/loaders/DDSLoader.js"></script>
     <script src="./js/loaders/MTLLoader.js"></script>
-    <script src="./js/libs/stats.min.js"></script>
-    <script src="./js/renderers/Projector.js"></script>
-    <script src="./js/Detector.js"></script>
-    <script src="./js/EventControls.js"></script>
-    <script src="./js/libs/dat.gui.min.js"></script>
+    <script src="js/libs/stats.min.js"></script>
 
     <div class="container-fluid">
 
@@ -61,11 +57,7 @@
             </div>
             <div class="col-sm-6 float-right objViewerDiv" style="position: absolute; width: 100%; height: 100%; left: 50%;">
                 <a style="color:white;" class="btn btn-sm btn-primary" href="./bigModel.html">Load large sized model</a>
-                <a style="color:white;" class="btn btn-sm btn-primary" href="./transparentMaterial.html">Make model
-                    tranparent</a>
-                <div id="test" class="left" hidden="true">
-                    <p>xaxaxaxaxaaxaaxx<p>
-                </div>
+                <a style="color:white;" class="btn btn-sm btn-primary" href="/">Load original model</a>
                 <div id="objViewer" style="padding-left:0px;padding-top: 0px;border-left: 2px solid rgb(242, 240, 253);"></div>
             </div>
         </div>
@@ -110,18 +102,11 @@
     <script>
         var container;
         var camera, scene, renderer;
-        var controls, light, spLight, clock, stats;
-        var EventsControls;
+        var controls, light;
         var mouseX = 0, mouseY = 0;
         var windowHalfX = window.innerWidth / 2;
         var windowHalfY = window.innerHeight / 2;
         var object;
-        var _mouse = { x: 0, y: 0 },
-            objects = [],
-            _projector = new THREE.Projector();
-
-        var keyLight, fillLight, backLight;
-        var meshChild, mesh;
         init();
         animate();
         function init() {
@@ -129,7 +114,6 @@
             container = document.createElement('div');
             document.getElementById("objViewer").appendChild(container);
             //document.body.appendChild( container );
-            //document.getElementById("objViewer").addEventListener( 'mousedown', onDocumentMouseDown, false );
             camera = new THREE.PerspectiveCamera(75, window.innerWidth / 2 / window.innerHeight, 2, 2000);
             camera.position.z = 250;
 
@@ -137,7 +121,7 @@
             // scene
             scene = new THREE.Scene();
 
-            var ambientLight = new THREE.AmbientLight(0x101030, 0.4);
+            var ambientLight = new THREE.AmbientLight(0xcccccc, 0.4);
             scene.add(ambientLight);
             var pointLight = new THREE.PointLight(0xffffff, 0.8);
             camera.add(pointLight);
@@ -146,49 +130,43 @@
             function loadModel() {
                 object.traverse(function (child) {
                     if (child.isMesh) {
-                        console.log("child : " + child)
-                        child.material.map = texture;
+                        //child.material.map = texture;
                         child.castShadow = true;
                         child.receiveShadow = true;
-                        meshChild = child;
+                        child.material = modelMaterial;
+                        /* //If material .mtl is loaded
+                        child.material.ambient.setHex(0xFF0000);
+                        child.material.color.setHex(0x00FF00); */
                     }
                 });
                 object.castShadow = true;
-                object.position.y = - 25;
+                object.position.y = - 35;
                 //Lights
-                spLight = new THREE.SpotLight(0x654321, 1.75, 2000, Math.PI / 3);
+                var spLight = new THREE.SpotLight(0x654321, 1.75, 2000, Math.PI / 3);
                 spLight.castShadow = true;
                 spLight.position.set(-100, 300, -50);
                 scene.add(spLight);
 
                 var ground = new THREE.Mesh(new THREE.PlaneGeometry(200, 200, 10, 10), new THREE.MeshLambertMaterial({ color: 0x006600 }));
                 ground.receiveShadow = true;
-                ground.position.set(0, -30, 0);
+                ground.position.set(0, -40, 0);
                 ground.rotation.x = -Math.PI / 2;
                 scene.add(ground);
 
-                //main model object
                 scene.add(object);
 
-                //Lights
-                keyLight = new THREE.DirectionalLight(new THREE.Color('hsl(30, 100%, 75%)'), 1.0);
+                var keyLight = new THREE.DirectionalLight(new THREE.Color('hsl(30, 100%, 75%)'), 1.0);
                 keyLight.position.set(-100, 0, 100);
 
-                fillLight = new THREE.DirectionalLight(new THREE.Color('hsl(240, 100%, 75%)'), 0.75);
+                var fillLight = new THREE.DirectionalLight(new THREE.Color('hsl(240, 100%, 75%)'), 0.75);
                 fillLight.position.set(100, 0, 100);
 
-                backLight = new THREE.DirectionalLight(0xffffff, 1.0);
+                var backLight = new THREE.DirectionalLight(0xffffff, 1.0);
                 backLight.position.set(100, 0, -100).normalize();
 
                 scene.add(keyLight);
                 scene.add(fillLight);
                 scene.add(backLight);
-
-                //other lights
-                var spLight = new THREE.SpotLight(0xffffff, 1, 2000, Math.PI / 3);
-                spLight.castShadow = true;
-                spLight.position.set(-100, 300, -50);
-                scene.add(spLight);
 
             }
             var modelMaterial = new THREE.MeshPhongMaterial({
@@ -221,27 +199,33 @@
             var loader = new THREE.OBJLoader(manager);
             loader.load('models/247_House 15_obj.obj', function (obj) {
                 obj.scale.set(.3, .3, .3);//to reduce size of model- to one third
-                object = obj; //object for using model overall
-                objects.push(object);
+                
+                object = obj;
             }, onProgress, onError);
-
-
-            //Renderer
+            /*  THREE.Loader.Handlers.add(/\.dds$/i, new THREE.DDSLoader());
+             new THREE.MTLLoader()
+                 .setPath('models/')
+                 .load('colonial_obj.mtl', function (materials) {
+                     materials.preload();
+                     new THREE.OBJLoader()
+                         .setMaterials(materials)
+                         .setPath('models/')
+                         .load('colonial_obj.obj', function (object) {
+                             object.position.y = - 50;
+                             object.scale.set(2.5, 2.5, 2.5);
+                             scene.add(object);
+                             
+                         }, onProgress, onError);
+                 }); */
+            //
             renderer = new THREE.WebGLRenderer({ antialias: false, alpha: true });
             renderer.setClearColor(0x000000, 0);
-            renderer.shadowMapEnabled = true;
-            renderer.shadowMapSoft = true;
+            /* renderer.autoClearColor = false;
+            var plane = new THREE.Mesh(new THREE.PlaneGeometry(500, 500), new THREE.MeshBasicMaterial({ transparent: true, opacity: 0.1 }));
+                            plane.position.z = -10;
+                            scene.add(plane); */
 
             controls = new THREE.OrbitControls(camera);
-            clock = new THREE.Clock();
-
-            // prepare stats //commented for now from animate()
-            /* stats = new Stats();
-            stats.domElement.style.position = 'absolute';
-            stats.domElement.style.left = '50px';
-            stats.domElement.style.bottom = '50px';
-            stats.domElement.style.zIndex = 1;
-            container.appendChild(this.stats.domElement); */
             /* controls.enableDamping = true;
             controls.dampingFactor = 0.25;
             controls.enableZoom = true; //added peed to the rotation speed of the model */
@@ -250,12 +234,10 @@
             renderer.setSize(window.innerWidth / 2, window.innerHeight);
             container.appendChild(renderer.domElement);
 
-
-            //document.addEventListener( 'mousemove', onDocumentMouseMove, false );//for selected comp data
-            document.getElementById("objViewer").addEventListener('mousedown', onDocumentMouseDown, false);
+            //document.addEventListener( 'mousemove', onDocumentMouseMove, false );
+            //
             window.addEventListener('resize', onWindowResize, false);
         }
-
         function onWindowResize() {
             windowHalfX = window.innerWidth / 2;
             windowHalfY = window.innerHeight / 2;
@@ -263,43 +245,15 @@
             camera.updateProjectionMatrix();
             renderer.setSize(window.innerWidth / 2, window.innerHeight);
         }
-
         function onDocumentMouseMove(event) {
             mouseX = (event.clientX - windowHalfX) / 2;
             mouseY = (event.clientY - windowHalfY) / 2;
         }
-
-        function onDocumentMouseDown(event) {
-
-            event.preventDefault();
-
-            // find intersections
-            _mouse.x = (event.clientX / window.innerWidth) * 2 - 1;
-            _mouse.y = - (event.clientY / window.innerHeight) * 2 + 1;
-
-            var vector = new THREE.Vector3(_mouse.x, _mouse.y, 1);
-
-            //var ray = _projector.pickingRay( vector.clone(), camera );
-
-            var ray = new THREE.Raycaster(camera.position, vector.sub(camera.position).normalize());
-            ray.setFromCamera(vector, camera);
-
-            var intersects = ray.intersectObjects(objects[0].children);
-
-            console.log("intersects scene children : "+intersects);
-
-            if (intersects.length > 0) {
-                console.log("selected!");
-                _SELECTED_DOWN = true;
-            }
-        }
-
         //
         function animate() {
             requestAnimationFrame(animate);
             render();
             controls.update();
-            //stats.update();
         }
         function render() {
             //camera.position.x += ( mouseX - camera.position.x ) * .05;
@@ -307,51 +261,6 @@
             //camera.lookAt( scene.position );
             renderer.render(scene, camera);
         }
-
-        var already_selected = false;
-
-        /* function onDocumentMouseDown(event) {
-            event.preventDefault();
-
-            var projector = new THREE.Projector();
-            mouseVector = new THREE.Vector3();
-            mouseVector.x = 2 * (event.clientX / window.innerWidth) - 1;
-            mouseVector.y = 1 - 2 * (event.clientY / window.innerHeight);
-
-            //var mouse3D = new THREE.Vector3( ( event.clientX / window.innerWidth ) * 2 - 1,   
-            //                        -( event.clientY / window.innerHeight ) * 2 + 1,  
-            //                        0.5 );     
-            //var raycaster = projector.pickingRay( mouseVector.clone(), camera );
-            var raycaster = new THREE.Raycaster(camera.position, mouseVector.sub(camera.position).normalize());
-            raycaster.setFromCamera(mouseVector, camera);
-
-            var intersects = raycaster.intersectObjects(objects[0].children);
-            if (intersects != [])
-                console.log("intersects : ", intersects);
-            if (intersects.length > 0) {
-                var door = document.getElementById("test");
-                door.hidden = false;
-                for (var i = 0; i < intersects.length; i++) {
-
-                    //intersects[i].object.material.color.setHex( Math.random() * 0xffffff );
-
-
-                    //var currentColor = new THREE.Color(intersects[i].object.material.color);
-                    //var currentColor = +'0x' + intersects[i].object.material.color.getHex().toString(16);
-
-                      if (already_selected == true) {
-                         intersects[i].object.material.color.setHex(0x380000);
-                         //intersects[i].object.material.color.setHex( currentColor );
-                         already_selected = false;
-                     }
-                     else {
-                         intersects[i].object.material.color.setHex(0x000000);
-                         already_selected = true;
-                     } 
-                }
-
-            }
-        } */
     </script>
 
 
