--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css?family=Alegreya+Sans" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
     <!-- Potree CSS files -->
     <link rel="stylesheet" type="text/css" href="./libs/potree/potree.css">
@@ -22,6 +23,7 @@
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" crossorigin="anonymous"></script>
+    
 
 </head>
 
@@ -50,6 +52,11 @@
     <script src="./js/EventControls.js"></script>
     <script src="./js/libs/dat.gui.min.js"></script>
 
+    <!--new-->
+    <script src="./js/loaders/DDSLoader.js"></script>
+    <script src="./js/loaders/MTLLoader.js"></script>
+    <script src="./js/loaders/OBJLoader.js"></script>
+
     <div class="container-fluid">
 
         <div class="row">
@@ -60,18 +67,22 @@
 
             </div>
             <div class="col-sm-6 float-right objViewerDiv" style="position: absolute; width: 100%; height: 100%; left: 50%;">
-                <a style="color:white;" class="btn btn-sm btn-primary" href="./bigModel.html">Load large sized model</a>
+                <!-- <a style="color:white;" class="btn btn-sm btn-primary" href="./bigModel.html">Load large sized model</a>
                 <a style="color:white;" class="btn btn-sm btn-primary" href="./transparentMaterial.html">Make model
-                    tranparent</a>
-                <div id="test" class="left" hidden="true">
-                    <p>xaxaxaxaxaaxaaxx<p>
+                    tranparent</a> -->
+                <div class="btn-group">
+                        <button class="btn btn-lg" style="border-radius: 12px;" onclick="startRotatingModel()"><i class="fa fa-life-ring" aria-hidden="true"></i></button> 
+                        <button class="btn btn-lg" style="border-radius: 12px;" onclick="stopRotatingModel()"><i class="fa fa-stop" aria-hidden="true"></i></button>
+                        <button class="btn btn-lg" style="border-radius: 12px;" onclick="makeModelTransparent()"><i class="fa fa-ravelry" aria-hidden="true"></i></button>
+                        <button class="btn btn-lg" style="border-radius: 12px;" onclick="showModelAsWireframe()"><i class="fa fa-object-ungroup" aria-hidden="true"></i></button>
+                        <button class="btn btn-lg" style="border-radius: 12px;" onclick="reloadModel()"><i class="fa fa-joomla" aria-hidden="true"></i></button>
                 </div>
                 <div id="objViewer" style="padding-left:0px;padding-top: 0px;border-left: 2px solid rgb(242, 240, 253);"></div>
             </div>
         </div>
     </div>
     <script>
-
+        //Potree script
         window.viewer = new Potree.Viewer(document.getElementById("potree_render_area"));
 
         viewer.setEDLEnabled(true);
@@ -82,298 +93,35 @@
         viewer.setBackground("gradient"); // ["skybox", "gradient", "black", "white"];
         viewer.setDescription(``);
         viewer.loadSettingsFromURL();
+        viewer.createControls();
+        //viewer.toggleMap();
 
-        viewer.loadGUI(() => {
+        /* viewer.loadGUI(() => {
             viewer.setLanguage('en');
             $("#menu_appearance").next().show();
             $("#menu_tools").next().show();
             $("#menu_scene").next().show();
             //viewer.toggleSidebar();
-        });
-
+        }); */
+        //Potree.loadPointCloud("http://5.9.65.151/mschuetz/potree/resources/pointclouds/archpro/heidentor/cloud.js", "Heidentor", function(e){
         Potree.loadPointCloud("http://5.9.65.151/mschuetz/potree/resources/pointclouds/faro/westend_palais/cloud.js", "westend", e => {
             let pointcloud = e.pointcloud;
             let material = pointcloud.material;
             viewer.scene.addPointCloud(pointcloud);
+            //viewer.scene.add(object);//tried, not worked
             material.pointColorType = Potree.PointColorType.RGB; // any Potree.PointColorType.XXXX 
             material.size = 1;
             material.pointSizeType = Potree.PointSizeType.ADAPTIVE;
             material.shape = Potree.PointShape.SQUARE;
 
-            viewer.scene.view.lookAt(new THREE.Vector3(150, 0, 0));
+            viewer.scene.view.lookAt(new THREE.Vector3(150, 5, 0));
 
             viewer.fitToScreen();
         });
 
     </script>
 
-    <script>
-        var container;
-        var camera, scene, renderer;
-        var controls, light, spLight, clock, stats, fogColor;
-        var EventsControls;
-        var smokeTexture, smokeMaterial, smokeGeo, smokeParticles, cubeSineDriver;
-        var mouseX = 0, mouseY = 0;
-        var windowHalfX = window.innerWidth / 2;
-        var windowHalfY = window.innerHeight / 2;
-        var object;
-        var _mouse = { x: 0, y: 0 },
-            objects = [],
-            _projector = new THREE.Projector();
-
-        var keyLight, fillLight, backLight;
-        var meshChild, mesh;
-        init();
-        animate();
-        function init() {
-            //container = document.getElementById("objViewer");
-            container = document.createElement('div');
-            document.getElementById("objViewer").appendChild(container);
-            //document.body.appendChild( container );
-            //document.getElementById("objViewer").addEventListener( 'mousedown', onDocumentMouseDown, false );
-            camera = new THREE.PerspectiveCamera(75, window.innerWidth / 2 / window.innerHeight, 2, 2000);
-            camera.position.z = 270;
-
-
-            // scene
-            scene = new THREE.Scene();
-
-            var ambientLight = new THREE.AmbientLight(0x101030, 0.4);
-            scene.add(ambientLight);
-            var pointLight = new THREE.PointLight(0xffffff, 0.8);
-            camera.add(pointLight);
-            scene.add(camera);
-            // manager
-            function loadModel() {
-                object.traverse(function (child) {
-                    if (child.isMesh) {
-                        console.log("child : " + child)
-                        child.material.map = texture;
-                        child.castShadow = true;
-                        cubeSineDriver = 0;
-                        //child.receiveShadow = true;
-                        meshChild = child;
-                    }
-                });
-
-                scene.add(object);
-                object.position.x = 0;
-                object.position.y = -20;
-                object.position.z = 0;
-
-
-                //Lights
-                spLight = new THREE.SpotLight(0x654321, 1.75, 2000, Math.PI / 3);
-                spLight.castShadow = true;
-                spLight.position.set(-100, 300, -50);
-                scene.add(spLight);
-
-                var ground = new THREE.Mesh(new THREE.PlaneGeometry(5000, 5000, 10, 10), new THREE.MeshLambertMaterial({ color: 0xf5f5f5 }));
-                ground.receiveShadow = true;
-                ground.position.set(0, -25, 0);
-                ground.rotation.x = -Math.PI / 2;
-                scene.add(ground);
-
-                //Helpers
-                /* var helper = new THREE.CameraHelper(spLight.shadow.camera);
-                scene.add(helper);
-
-                scene.add( new THREE.AxisHelper( 200 ) ); */
-
-                var spLight = new THREE.SpotLight(0xffffff, 1, 2000, Math.PI / 3);
-                spLight.castShadow = true;
-                spLight.position.set(100, 300, -50);
-                scene.add(spLight);            
-
-                //main model object
-                scene.add(object);
-
-
-            }//loadModel()
-
-
-            var modelMaterial = new THREE.MeshPhongMaterial({
-                color: 0xb9d5ff,
-                ambient: 0xfff660,
-                shininess: 100,
-                wireframe: false,
-                transparent: true,
-                opacity: 0.8,
-                side: THREE.DoubleSide,
-                combine: THREE.MixOperation
-            });
-
-            var manager = new THREE.LoadingManager(loadModel);
-            manager.onProgress = function (item, loaded, total) {
-                console.log(item, loaded, total);
-            };
-            // texture
-            var textureLoader = new THREE.TextureLoader(manager);
-            var texture = textureLoader.load('models/ironman.jpg');
-
-            /* to change texture using three image loader
-             var manager1 = new THREE.LoadingManager();
-             var texture1 = new THREE.Texture();
-             var loader = new THREE.ImageLoader( manager1 );
-             loader.load( 'models/rough.jpg', function ( image ) {
-             texture1.image = image;
-             texture1.needsUpdate = true;
-             }); */
-
-            // model
-
-            function onProgress(xhr) {
-                if (xhr.lengthComputable) {
-                    var percentComplete = xhr.loaded / xhr.total * 100;
-                    console.log('model ' + Math.round(percentComplete, 2) + '% downloaded');
-                }
-            }
-            function onError(xhr) { }
-
-            var loader = new THREE.OBJLoader(manager);
-
-            loader.load('models/IronMan.obj', function (obj) {
-                obj.scale.set(.5, .5, .5);//to reduce size of model- to one third
-                object = obj; //object for using model overall
-                objects.push(object);
-            }, onProgress, onError);
-
-            //Renderer
-            renderer = new THREE.WebGLRenderer({ antialias: false, alpha: true });
-
-            renderer.setClearColor(0x000000, 1);
-
-            //renderer.shadowMapEnabled = true;
-            renderer.shadowMapSoft = true;
-            renderer.shadowMap.enabled = true;
-            renderer.shadowMap.type = THREE.PCFSoftShadowMap;
-
-            //newly added
-            /* renderer.physicallyCorrectLights = true;
-            renderer.gammaInput = true;
-            renderer.gammaOutput = true;
-            //renderer.toneMapping = THREE.ReinhardToneMapping;*/
-            clock = new THREE.Clock();
-            console.log("clock : " + clock)
-
-            controls = new THREE.OrbitControls(camera);
-
-            controls.addEventListener('change', render);
-
-            /* controls.enableDamping = true;
-            controls.dampingFactor = 0.25;
-            controls.enableZoom = true; //added peed to the rotation speed of the model */
-
-            renderer.setPixelRatio(window.devicePixelRatio);
-            renderer.setSize(window.innerWidth / 2, window.innerHeight);
-            container.appendChild(renderer.domElement);
-
-
-            //document.addEventListener( 'mousemove', onDocumentMouseMove, false );//for selected comp data
-            //document.getElementById("objViewer").addEventListener('mousedown', onDocumentMouseDown, false);
-            window.addEventListener('resize', onWindowResize, false);
-        }
-
-        function onWindowResize() {
-            windowHalfX = window.innerWidth / 2;
-            windowHalfY = window.innerHeight / 2;
-            camera.aspect = window.innerWidth / 2 / window.innerHeight;
-            camera.updateProjectionMatrix();
-            renderer.setSize(window.innerWidth / 2, window.innerHeight);
-        }
-
-        function onDocumentMouseMove(event) {
-            mouseX = (event.clientX - windowHalfX) / 2;
-            mouseY = (event.clientY - windowHalfY) / 2;
-        }
-
-        function onDocumentMouseDown(event) {
-
-            event.preventDefault();
-
-            // find intersections
-            _mouse.x = (event.clientX / window.innerWidth) * 2 - 1;
-            _mouse.y = - (event.clientY / window.innerHeight) * 2 + 1;
-
-            var vector = new THREE.Vector3(_mouse.x, _mouse.y, 1);
-
-            //var ray = _projector.pickingRay( vector.clone(), camera );
-
-            var ray = new THREE.Raycaster(camera.position, vector.sub(camera.position).normalize());
-            ray.setFromCamera(vector, camera);
-
-            var intersects = ray.intersectObjects(objects[0].children);
-
-            console.log("intersects scene children : " + JSON.stringify(intersects));
-
-            if (intersects.length > 0) {
-                console.log("selected!");
-                _SELECTED_DOWN = true;
-            }
-        }
-
-        //
-        function animate() {
-            requestAnimationFrame(animate);
-            render();
-            controls.update();
-            /* //for rotating object on y axis, change respectively for other axis
-            object.rotation.y += 0.01; */
-            //stats.update();
-        }
-
-
-
-        function render() {
-            renderer.render(scene, camera);
-        }
-
-
-        var already_selected = false;
-
-        /* function onDocumentMouseDown(event) {
-            event.preventDefault();
-
-            var projector = new THREE.Projector();
-            mouseVector = new THREE.Vector3();
-            mouseVector.x = 2 * (event.clientX / window.innerWidth) - 1;
-            mouseVector.y = 1 - 2 * (event.clientY / window.innerHeight);
-
-            //var mouse3D = new THREE.Vector3( ( event.clientX / window.innerWidth ) * 2 - 1,   
-            //                        -( event.clientY / window.innerHeight ) * 2 + 1,  
-            //                        0.5 );     
-            //var raycaster = projector.pickingRay( mouseVector.clone(), camera );
-            var raycaster = new THREE.Raycaster(camera.position, mouseVector.sub(camera.position).normalize());
-            raycaster.setFromCamera(mouseVector, camera);
-
-            var intersects = raycaster.intersectObjects(objects[0].children);
-            if (intersects != [])
-                console.log("intersects : ", intersects);
-            if (intersects.length > 0) {
-                var door = document.getElementById("test");
-                door.hidden = false;
-                for (var i = 0; i < intersects.length; i++) {
-
-                    //intersects[i].object.material.color.setHex( Math.random() * 0xffffff );
-
-
-                    //var currentColor = new THREE.Color(intersects[i].object.material.color);
-                    //var currentColor = +'0x' + intersects[i].object.material.color.getHex().toString(16);
-
-                      if (already_selected == true) {
-                         intersects[i].object.material.color.setHex(0x380000);
-                         //intersects[i].object.material.color.setHex( currentColor );
-                         already_selected = false;
-                     }
-                     else {
-                         intersects[i].object.material.color.setHex(0x000000);
-                         already_selected = true;
-                     } 
-                }
-
-            }
-        } */
-    </script>
+<script src="./js/alpha.js"></script>
 
 
 </body>
